recursion.cons.lessons.recursion.cons.ButNlast.scala.error
butNlast:-6: error: Missing closing brace `}' assumed here
try {
^butNlast:1: error: expected class or object definition
def butNlast(l:List[Int], n:Int): List[Int] = {
^